force-app/main/default/objects/Opportunity/fields/Close_Date_Today__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Today__c</fullName>
    <formula>TODAY() = CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date Today</label>
    <type>Checkbox</type>
</CustomField>