force-app/main/default/objects/Opportunity/fields/Delivery_Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Schedule_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Schedule Date</label>
    <type>Date</type>
</CustomField>