force-app/main/default/objects/Opportunity/recordTypes/Fast_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Fast_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Fast Sales Process</businessProcess>
    <label>Fast Opportunity</label>
</RecordType>