force-app/main/default/objects/Opportunity/recordTypes/Residential_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Residential_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Residential Opportunities</businessProcess>
    <description>For residential sales opportunities requiring that special Residential Sales touch</description>
    <label>Residential Opportunity</label>
</RecordType>