force-app/main/default/objects/Opportunity/validationRules/Delivery_Schedule_14_Days_Or_Less.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_Schedule_14_Days_Or_Less</fullName>
    <active>true</active>
    <description>Delivery_Schedule_14_Days_Or_Less</description>
    <errorConditionFormula>ISPICKVAL( StageName , &quot;Closed Won&quot;) &amp;&amp; ( Delivery_Schedule_Date__c - CloseDate ) &gt; 14</errorConditionFormula>
    <errorDisplayField>Delivery_Schedule_Date__c</errorDisplayField>
    <errorMessage>Dates of type delivery must be no later than 14 days after close date</errorMessage>
</ValidationRule>